# ai_gen_demo

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile.prod  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
database/: .env.sample
scripts/: build_dist.py
src/: __init__.py  database.py  main.py  routers.py
src/auth/: middleware.py  router.py
src/auth/models/: user.py
src/auth/services/: auth.py
src/quiz/: router.py
src/quiz/models/: quiz.py
src/quiz/services/: quiz.py
tests/: conftest.py  test_auth.py  test_quiz.py
